--- a/app/src/main/res/layout/activity_wificonfig.xml
+++ b/app/src/main/res/layout/activity_wificonfig.xml
@@ -8,6 +8,7 @@
         android:layout_width="match_parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        android:text="GW-2.4G"
         app:layout_constraintVertical_chainStyle="spread"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/et_wifipwd"
@@ -16,6 +17,7 @@
         android:id="@+id/et_wifipwd"
         android:layout_width="match_parent"
         app:layout_constraintLeft_toLeftOf="parent"
+        android:text="29418680"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_wifiname"
         app:layout_constraintBottom_toTopOf="@+id/s_parent"
