--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,13 @@
         android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/rc_ble"
         android:layout_height="wrap_content" />
+    <Button
+        android:id="@+id/btn_oldblue"
+        android:layout_width="match_parent"
+        android:visibility="gone"
+        app:layout_constraintTop_toTopOf="parent"
+        android:text="oldblue"
+        android:layout_height="wrap_content" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rc_ble"
