--- a/app/src/main/res/layout/activity_gatt_server.xml
+++ b/app/src/main/res/layout/activity_gatt_server.xml
@@ -12,6 +12,13 @@
         app:layout_constraintRight_toRightOf="parent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+    <Button
+        android:id="@+id/btn_notify"
+        android:text="notify"
+        app:layout_constraintRight_toRightOf="@+id/btn_openble"
+        app:layout_constraintTop_toBottomOf="@+id/btn_openble"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
